[package]
name = "rapidhttp"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "_rapidhttp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "stream", "multipart", "blocking", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.9"
url = "2.5"
http = "1.1"
once_cell = "1.20"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
